<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newevent_hint">Event name?</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="registerparticipant_button">Register</string>
    <string name="newevent_button">Add Event</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_start_label">Start time?</string>
    <string name="newevent_end_label">End time?</string>
    <string name="newevent_date_first">01-01-2016</string>
    <string name="newevent_start_first">10:00</string>
    <string name="newevent_end_first">08:00</string>
</resources>
